# climatewatch

./: .gitignore  README.md  fetch_tweets.bat  fetch_tweets_ipcc.bat  index.py  pyproject.toml
.streamlit/: config.toml
climatewatch/: __init__.py  analysis.py  data.py  nlp.py  stopwords.py  twitter.py  utils.py
climatewatch/nlp/: nlp.py  stopwords.py
notebooks/: 20220304 - IPCC Data Preparation.ipynb  20220504 - EACOP Data Preparation.ipynb  Untitled.ipynb  edges.csv  emissions.csv  emissions_ipcc.csv  gephi_test.gephi  nodes.csv
